fixed oversight where media type icon is misaligned for media sent by other users

--- a/styles/console.css
+++ b/styles/console.css
@@ -191,7 +191,14 @@
 
 .console-media-tag {
     color: white;
+}
+
+.console-media-tag-right {
     transform: translate(-50%, 150%);
+}
+
+.console-media-tag-left {
+    transform: translate(50%, 150%);
 }
 
 .console-message-interact {
